src/styles/components/_accordions.scss
.accordion {


  &__item_content {
    color: $color-black;
    overflow: hidden;
    height: 100%;
    max-height: 0px;
    font-weight: 400;
    font-size: 1.125rem;
    line-height: 1.625rem;
    margin-top: 1rem;
    padding-top: 0;


    // @include transition(max-height, 0.1s, ease-in-out);

    h2 {
      color: $color-red;
      font-family: 'Oswald';
      font-style: normal;
      font-weight: 700;
      font-size: 1.125rem;
      line-height: 1.375rem;
      text-transform: uppercase;
      margin-bottom: 1rem;
    }

    h4 {
      font-family: 'Barlow';
      font-style: normal;
      font-weight: 600;
      font-size: 1.125rem;
      line-height: 1.5625rem;
      color: $color-carbon;
      margin-bottom: 1rem
    }

    .item,
    .sub-item {
      font-family: 'Barlow';
      font-style: normal;
      font-weight: 400;
      font-size: 1rem;
      line-height: 1.375rem;
      color: $color-carbon;
    }

    .item {
      margin-left: 27px;
    }

    .sub-item {
      margin-left: 49.6px;
    }


    a {
      color: $color-red;
      font-weight: 600;
      text-decoration: underline;
    }

    p {
      color: $color-black;
      //padding-bottom: 1rem;
      font-family: 'Barlow';
      font-style: normal;
      font-weight: 400;
      font-size: 1rem;
      line-height: 1.375rem;
      margin-bottom: 1rem
    }

    p:not(:last-of-type) {
      //margin-bottom: 1rem;
    }

    h5 {
      font-family: 'Barlow';
      font-style: normal;
      font-weight: 600;
      font-size: 1.125rem;
      line-height: 1.5625rem;
      text-decoration-line: underline;
      color: $color-red;
      margin-bottom: 1rem
    }

    .acc-table {
      display: flex;
      margin-bottom: 1rem;

      p {
        border-top: 1px solid $color-black;
        padding-right: .8125rem;
        padding-left: .8125rem;
        padding-top: 0.5rem;
        padding-bottom: 0.5rem;
        margin: 0;
      }

      h3 {
        font-family: 'Oswald';
        text-align: center;
        font-weight: 400;
        font-size: 1.125rem;
        background: rgba(82, 108, 173, 0.3);
        padding-top: .3125rem;
        padding-bottom: .3125rem;
      }

      .last-child {
        border-right: 1px solid $color-black !important;
      }
    }

    .first-column {
      padding-bottom: 0;
      border: 1px solid $color-black;
      border-right: none;

      p {
        font-family: 'Oswald';
        font-style: normal;
        font-weight: 400;
        font-size: .875rem;
        line-height: 1.3125rem;
        color: $color-black;
      }


    }

    .second-column {
      width: 5rem;
      text-align: center;
      padding-bottom: 0;
      border: 1px solid $color-black;
      border-right: none;

      p {
        font-family: 'Barlow';
        font-style: normal;
        font-weight: 400;
        font-size: 14px;
        line-height: 1.3125rem;
        color: $color-black;

        display: flex;
        justify-content: center;
        margin: auto;
      }
    }

    .acc-mobile-image {
      max-width: 7.8125rem;
    }

    small {
      font-family: 'Barlow';
      font-style: normal;
      font-weight: 400;
      font-size: .875rem;
      line-height: 1.3125rem;
      margin-bottom: 1rem
    }
  }

  [aria-expanded="true"] {
    background: none;
    height: auto;

    .accordion__item_title {
      color: $color-red;
    }

    .accordion__item_content {
      max-height: 100%;
      padding-bottom: 1.5rem;
    }

    .accordion__item_title::after {
      background-image: url('/assets/images/acc-minus.png');
      @include transition(background-image, 0.3s, ease-in-out);
    }
  }

  &__item {
    background: none;
    border: 1px solid $color-black;
    border-top: 0;
    border-bottom: 1px solid $color-black;
    padding-top: .9331rem;
    padding-right: 1.6875rem;
    padding-left: 1.6875rem;
  }




  &__item_title {
    color: $color-black;
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 1.125rem;
    line-height: 1.375rem;
    cursor: pointer;
    text-align: center;
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-transform: uppercase;
    padding-left: .625rem;
    padding-right: .625rem;

    &::after {
      content: "";
      display: block;
      background-image: url('/assets/images/acc-plus.png');
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
      height: 34px;
      width: 34px;
      transition: .5s;
    }


  }

}

.accordion__item {
  &:first-child {
    border-top: 1px solid $color-black;
  }
}

